--- a/from_scratch.ipynb
+++ b/from_scratch.ipynb
@@ -1,27 +1,665 @@
 {
  "cells": [
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T16:55:30.623987Z",
+     "start_time": "2024-12-04T16:55:30.619974Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import os\n",
+    "\n",
+    "from sympy.polys.polyconfig import query\n",
+    "\n",
+    "os.chdir('C:\\\\Users\\\\D3sert\\\\PycharmProjects\\\\from_scratch')\n",
+    "os.getcwd()\n",
+    "\n",
+    "\n",
+    "import Bigram"
+   ],
+   "id": "85fa8e9752092664",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\D3sert\\\\PycharmProjects\\\\from_scratch'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-04T16:33:52.477833Z",
-     "start_time": "2024-12-04T16:33:52.454753Z"
+     "end_time": "2024-12-04T16:55:33.261426Z",
+     "start_time": "2024-12-04T16:55:33.258382Z"
     }
    },
-   "source": "! wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+   "source": [
+    "with open('tinyshakespeare.txt', 'r',encoding='utf-8') as f:\n",
+    "    text = f.read()"
+   ],
+   "outputs": [],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T16:56:00.767277Z",
+     "start_time": "2024-12-04T16:56:00.764444Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(f'Length of text: {len(text)}')",
+   "id": "af2a7551fc303713",
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'wget' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
+      "Length of text: 1115394\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T16:56:08.288754Z",
+     "start_time": "2024-12-04T16:56:08.286231Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(text[:1000])",
+   "id": "da20bdc94f130656",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Citizen:\n",
+      "Before we proceed any further, hear me speak.\n",
+      "\n",
+      "All:\n",
+      "Speak, speak.\n",
+      "\n",
+      "First Citizen:\n",
+      "You are all resolved rather to die than to famish?\n",
+      "\n",
+      "All:\n",
+      "Resolved. resolved.\n",
+      "\n",
+      "First Citizen:\n",
+      "First, you know Caius Marcius is chief enemy to the people.\n",
+      "\n",
+      "All:\n",
+      "We know't, we know't.\n",
+      "\n",
+      "First Citizen:\n",
+      "Let us kill him, and we'll have corn at our own price.\n",
+      "Is't a verdict?\n",
+      "\n",
+      "All:\n",
+      "No more talking on't; let it be done: away, away!\n",
+      "\n",
+      "Second Citizen:\n",
+      "One word, good citizens.\n",
+      "\n",
+      "First Citizen:\n",
+      "We are accounted poor citizens, the patricians good.\n",
+      "What authority surfeits on would relieve us: if they\n",
+      "would yield us but the superfluity, while it were\n",
+      "wholesome, we might guess they relieved us humanely;\n",
+      "but they think we are too dear: the leanness that\n",
+      "afflicts us, the object of our misery, is as an\n",
+      "inventory to particularise their abundance; our\n",
+      "sufferance is a gain to them Let us revenge this with\n",
+      "our pikes, ere we become rakes: for the gods know I\n",
+      "speak this in hunger for bread, not in thirst for revenge.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T16:56:57.463179Z",
+     "start_time": "2024-12-04T16:56:57.455589Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "chars = sorted(list(set(text)))\n",
+    "vocab_size = len(chars)\n",
+    "print(''.join(chars))\n",
+    "print(f'Vocab size: {vocab_size}')"
+   ],
+   "id": "b97d92d3442f1315",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " !$&',-.3:;?ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz\n",
+      "Vocab size: 65\n"
+     ]
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T16:59:29.360852Z",
+     "start_time": "2024-12-04T16:59:29.357456Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "stoi = {ch:i for i,ch in enumerate(chars)}\n",
+    "itos = {i:ch for i,ch in enumerate(chars)}\n",
+    "encode = lambda s: [stoi[c] for c in s]\n",
+    "decode = lambda l: ''.join([itos[i] for i in l])\n",
+    "\n",
+    "\n",
+    "print(encode('hello'))\n",
+    "print(decode(encode('hello')))"
+   ],
+   "id": "fc74b6043c7a81d3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[46, 43, 50, 50, 53]\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T17:03:42.268320Z",
+     "start_time": "2024-12-04T17:03:42.173226Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import torch\n",
+    "data = torch.tensor(encode(text), dtype=torch.long)\n",
+    "print(data.shape, data.dtype)\n",
+    "print(data[:100])"
+   ],
+   "id": "b2849e3a73f2915d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1115394]) torch.int64\n",
+      "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58, 47, 64, 43, 52, 10,  0, 14, 43, 44,\n",
+      "        53, 56, 43,  1, 61, 43,  1, 54, 56, 53, 41, 43, 43, 42,  1, 39, 52, 63,\n",
+      "         1, 44, 59, 56, 58, 46, 43, 56,  6,  1, 46, 43, 39, 56,  1, 51, 43,  1,\n",
+      "        57, 54, 43, 39, 49,  8,  0,  0, 13, 50, 50, 10,  0, 31, 54, 43, 39, 49,\n",
+      "         6,  1, 57, 54, 43, 39, 49,  8,  0,  0, 18, 47, 56, 57, 58,  1, 15, 47,\n",
+      "        58, 47, 64, 43, 52, 10,  0, 37, 53, 59])\n"
+     ]
+    }
+   ],
+   "execution_count": 31
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T17:04:19.931178Z",
+     "start_time": "2024-12-04T17:04:19.928414Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "n = int(0.9*len(data))\n",
+    "train_data = data[:n]\n",
+    "val_data = data[n:]"
+   ],
+   "id": "2932cc56eafb2cc8",
+   "outputs": [],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T17:06:47.734800Z",
+     "start_time": "2024-12-04T17:06:47.731299Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "block_size = 8\n",
+    "train_data[:block_size+1]\n",
+    "\n"
+   ],
+   "id": "60207c5d2d75eb86",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 35
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T17:06:50.524776Z",
+     "start_time": "2024-12-04T17:06:50.521121Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x = train_data[:block_size]\n",
+    "y = train_data[1:block_size+1]\n",
+    "for t in range(block_size):\n",
+    "    context = x[:t+1]\n",
+    "    target = y[t]\n",
+    "    print(f'Context: {context}, Target: {target}')"
+   ],
+   "id": "d2c032009f9e976b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Context: tensor([18]), Target: 47\n",
+      "Context: tensor([18, 47]), Target: 56\n",
+      "Context: tensor([18, 47, 56]), Target: 57\n",
+      "Context: tensor([18, 47, 56, 57]), Target: 58\n",
+      "Context: tensor([18, 47, 56, 57, 58]), Target: 1\n",
+      "Context: tensor([18, 47, 56, 57, 58,  1]), Target: 15\n",
+      "Context: tensor([18, 47, 56, 57, 58,  1, 15]), Target: 47\n",
+      "Context: tensor([18, 47, 56, 57, 58,  1, 15, 47]), Target: 58\n"
+     ]
+    }
+   ],
+   "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T17:13:14.653799Z",
+     "start_time": "2024-12-04T17:13:14.648357Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "torch.manual_seed(1337)\n",
+    "\n",
+    "batch_size = 4\n",
+    "block_size = 8\n",
+    "\n",
+    "def get_batch(split):\n",
+    "    data = train_data if split == 'train' else val_data\n",
+    "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+    "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
+    "    y = torch.stack([data[i+1:i+block_size+1] for i in ix])\n",
+    "    return x,y\n",
+    "\n",
+    "xb, yb = get_batch('train')\n",
+    "print(f\"inputs: {xb.shape} \\n {xb}\")\n",
+    "print(f\"targets: {yb.shape} \\n {yb}\")\n"
+   ],
+   "id": "68e72eba95a861da",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inputs: torch.Size([4, 8]) \n",
+      " tensor([[24, 43, 58,  5, 57,  1, 46, 43],\n",
+      "        [44, 53, 56,  1, 58, 46, 39, 58],\n",
+      "        [52, 58,  1, 58, 46, 39, 58,  1],\n",
+      "        [25, 17, 27, 10,  0, 21,  1, 54]])\n",
+      "targets: torch.Size([4, 8]) \n",
+      " tensor([[43, 58,  5, 57,  1, 46, 43, 39],\n",
+      "        [53, 56,  1, 58, 46, 39, 58,  1],\n",
+      "        [58,  1, 58, 46, 39, 58,  1, 46],\n",
+      "        [17, 27, 10,  0, 21,  1, 54, 39]])\n"
+     ]
+    }
+   ],
+   "execution_count": 39
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T17:27:51.827268Z",
+     "start_time": "2024-12-04T17:27:51.816268Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import torch.nn as nn\n",
+    "from torch.nn import functional as F\n",
+    "\n",
+    "class Model(nn.Module):\n",
+    "    def __init__(self,vocab_size):\n",
+    "        super().__init__()\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size,vocab_size)\n",
+    "\n",
+    "    def forward(self,idx,targets=None):\n",
+    "        logits = self.token_embedding_table(idx) # BTC\n",
+    "\n",
+    "        if targets is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            B,T,C = logits.shape\n",
+    "            logits = logits.view(B*T,C)\n",
+    "            targets = targets.view(B*T)\n",
+    "            loss = F.cross_entropy(logits,targets)\n",
+    "        return logits, loss\n",
+    "\n",
+    "    def generate(self,idx,max_new_tokens):\n",
+    "\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            logits, loss = self(idx)\n",
+    "            logits = logits[:,-1,:]\n",
+    "            probs = F.softmax(logits,dim=-1)\n",
+    "            idx_next = torch.multinomial(probs,num_samples=1)\n",
+    "            idx = torch.cat([idx,idx_next],dim=-1)\n",
+    "        return idx\n",
+    "\n",
+    "m = Model(vocab_size)\n",
+    "logits, loss = m(xb,yb)\n",
+    "print(f\"Logits: {logits.shape} \\n {loss}\")\n",
+    "\n",
+    "print(decode(m.generate(torch.zeros((1,1),dtype=torch.long),max_new_tokens=100)[0].tolist()))"
+   ],
+   "id": "2be718704003b4b4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logits: torch.Size([32, 65]) \n",
+      " 4.7433271408081055\n",
+      "\n",
+      "H$olyPDli3z.naqgovg.?zamS;?B;bvZ:YCbVV&h-k$Zo-m\n",
+      "HUVPYYX\n",
+      "tqRF ozrG;a$TmsoEG-qwnoN-:F&MMGNfUWRHqeMLTud\n"
+     ]
+    }
+   ],
+   "execution_count": 145
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T17:29:48.601998Z",
+     "start_time": "2024-12-04T17:29:47.740235Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "optimizer = torch.optim.AdamW(m.parameters(),lr=1e-3)",
+   "id": "136e3728f53f5bad",
+   "outputs": [],
+   "execution_count": 146
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T17:31:56.817956Z",
+     "start_time": "2024-12-04T17:31:48.873165Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "batch_size = 32\n",
+    "for steps in range(50000):\n",
+    "    xb, yb = get_batch('train')\n",
+    "    logits, loss = m(xb,yb)\n",
+    "    optimizer.zero_grad(set_to_none=True)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "print(loss.item())"
+   ],
+   "id": "38d07a338ab23e6a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.4928226470947266\n"
+     ]
+    }
+   ],
+   "execution_count": 161
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T17:32:00.823682Z",
+     "start_time": "2024-12-04T17:32:00.814543Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(decode(m.generate(torch.zeros((1,1),dtype=torch.long),max_new_tokens=100)[0].tolist()))\n",
+   "id": "95873206005ea84c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Angtor, tis chyor her irend hink ny y, m ioldy memy ysthent wheaven; dor he me th walin, withet me s\n"
+     ]
+    }
+   ],
+   "execution_count": 162
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Self Attention",
+   "id": "ee70fffcb136e3ea"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "understandable way:",
+   "id": "be7361c4b8c4021f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T05:44:59.131059Z",
+     "start_time": "2024-12-05T05:44:59.127297Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "B,T,C = 4,8,2\n",
+    "x = torch.randn(B,T,C)\n",
+    "xbow = torch.zeros((B,T,C))\n",
+    "for b in range(B):\n",
+    "    for t in range(T):\n",
+    "        xprev = x[b,:t+1]\n",
+    "        xbow[b,t] = torch.mean(xprev,0)"
+   ],
+   "id": "70fa76a2460880e5",
+   "outputs": [],
+   "execution_count": 170
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "matrix way to do it:",
+   "id": "95defde043fa6874"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "wei = torch.tril(torch.ones(T,T))\n",
+    "wei = wei / wei.sum(1,keepdim=True)\n",
+    "xbow2 = wei @ x"
+   ],
+   "id": "af0db17ce3bf3e74"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "best way to do it:",
+   "id": "b8fc9068be466376"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "tril = torch.tril(torch.ones(T,T))\n",
+    "wei = torch.zeros((T,T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei,dim=-1)+\n",
+    "\n",
+    "wei"
+   ],
+   "id": "f6a184e1201a7fd5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "final way",
+   "id": "d0496859c74b2b40"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T06:16:05.849613Z",
+     "start_time": "2024-12-05T06:16:05.843008Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "torch.manual_seed(1337)\n",
+    "B,T,C = 4,8,32\n",
+    "x = torch.randn(B,T,C)\n",
+    "\n",
+    "head_size = 16\n",
+    "key = nn.Linear(C,head_size,bias=False)\n",
+    "query = nn.Linear(C,head_size,bias=False)\n",
+    "value = nn.Linear(C,head_size,bias=False)\n",
+    "k = key(x)\n",
+    "q = query(x)\n",
+    "wei = q @ k.transpose(-2,-1)\n",
+    "\n",
+    "tril = torch.tril(torch.ones(T,T))\n",
+    "# wei = torch.zeros((T,T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei,dim=-1)\n",
+    "\n",
+    "\n",
+    "v = value(x)\n",
+    "out = wei @ v\n",
+    "\n",
+    "out.shape"
+   ],
+   "id": "cf6c454e006f64d2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 16])"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 174
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T06:12:37.424207Z",
+     "start_time": "2024-12-05T06:12:37.418926Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "wei",
+   "id": "51a85d51e398ae32",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.1574, 0.8426, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.2088, 0.1646, 0.6266, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.5792, 0.1187, 0.1889, 0.1131, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.0294, 0.1052, 0.0469, 0.0276, 0.7909, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.0176, 0.2689, 0.0215, 0.0089, 0.6812, 0.0019, 0.0000, 0.0000],\n",
+       "         [0.1691, 0.4066, 0.0438, 0.0416, 0.1048, 0.2012, 0.0329, 0.0000],\n",
+       "         [0.0210, 0.0843, 0.0555, 0.2297, 0.0573, 0.0709, 0.2423, 0.2391]],\n",
+       "\n",
+       "        [[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.1687, 0.8313, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.2477, 0.0514, 0.7008, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.4410, 0.0957, 0.3747, 0.0887, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.0069, 0.0456, 0.0300, 0.7748, 0.1427, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.0660, 0.0892, 0.0413, 0.6316, 0.1649, 0.0069, 0.0000, 0.0000],\n",
+       "         [0.0396, 0.2288, 0.0090, 0.2000, 0.2061, 0.1949, 0.1217, 0.0000],\n",
+       "         [0.3650, 0.0474, 0.0767, 0.0293, 0.3084, 0.0784, 0.0455, 0.0493]],\n",
+       "\n",
+       "        [[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.4820, 0.5180, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.1705, 0.4550, 0.3745, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.0074, 0.7444, 0.0477, 0.2005, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.8359, 0.0416, 0.0525, 0.0580, 0.0119, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.1195, 0.2061, 0.1019, 0.1153, 0.1814, 0.2758, 0.0000, 0.0000],\n",
+       "         [0.0065, 0.0589, 0.0372, 0.3063, 0.1325, 0.3209, 0.1378, 0.0000],\n",
+       "         [0.1416, 0.1519, 0.0384, 0.1643, 0.1207, 0.1254, 0.0169, 0.2408]],\n",
+       "\n",
+       "        [[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.6369, 0.3631, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.2586, 0.7376, 0.0038, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.4692, 0.3440, 0.1237, 0.0631, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.1865, 0.4680, 0.0353, 0.1854, 0.1248, 0.0000, 0.0000, 0.0000],\n",
+       "         [0.0828, 0.7479, 0.0017, 0.0735, 0.0712, 0.0228, 0.0000, 0.0000],\n",
+       "         [0.0522, 0.0517, 0.0961, 0.0375, 0.1024, 0.5730, 0.0872, 0.0000],\n",
+       "         [0.0306, 0.2728, 0.0333, 0.1409, 0.1414, 0.0582, 0.0825, 0.2402]]],\n",
+       "       grad_fn=<SoftmaxBackward0>)"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 173
   }
  ],
  "metadata": {
